--- a/starwars-ui/src/app/top-bar/top-bar.component.html
+++ b/starwars-ui/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,10 @@
 <div class="conteudo">
-	<h1>StarWars</h1>
-	<a>
-		<i class="fa fa-home fa-2x" style="cursor: pointer;" routerLink=""></i>
-	</a>
+	<div class="dv-starwars" style="cursor: pointer;" routerLink="">
+		<h1>StarWars</h1>
+		<img src="assets/icons/jedi-solid.svg" alt="home-jedi" >
+	</div>
+	<div class="dv-personagens">
+		<h2>Personagens</h2>
+	</div>
 </div>
 
