--- a/starwars-ui/src/app/home/home.component.css
+++ b/starwars-ui/src/app/home/home.component.css
@@ -8,14 +8,6 @@
   align-items: center;
 }
 
-.dv-titulo {
-  
-}
-
-.dv-conteudo {
-
-}
-
 .btn-personagens {
   width: 200px;
   height: 40px;
@@ -91,7 +83,16 @@
   400px 50px white,
   450px 100px white,
   600px 20px white,
-  800px 36px white;
+  800px 36px white,
+  700px 50px white,
+  730px 21px white,
+  900px 100px white,
+  825px 120px white,
+  610px 36px white,
+  500px 54px white,
+  1200px 27px white,
+  1500px 87px white,
+  1300px 91px white;
 }
 
 .stars2{
@@ -107,7 +108,16 @@
     230px 10px white,
     120px 130px white,
     300px 130px white,
-    220px 115px white;
+    220px 115px white,
+    720px 59px white,
+    690px 14px white,
+    780px 130px white,
+    855px 100px white,
+    656px 42px white,
+    502px 46px white,
+    1210px 10px white,
+    1428px 130px white,
+    1310px 111px white;
   animation: anim-stars 30s infinite alternate;
 }
 
@@ -126,7 +136,16 @@
     230px 10px white,
     120px 130px white,
     300px 130px white,
-    220px 115px white;
+    220px 115px white,
+    720px 59px white,
+    690px 14px white,
+    780px 130px white,
+    855px 100px white,
+    656px 42px white,
+    502px 46px white,
+    1210px 10px white,
+    1428px 130px white,
+    1310px 111px white;
 }
 
 @keyframes anim-stars {
